knative-build/runtimes/javascript/tests/error/payload-run-post-bad-endpoint.http
POST http://localhost:8080/bad HTTP/1.1
content-type: application/json

{
    "name" : "Bad",
    "place" : "POST"
}

###